# MyCCompiler

./: .gitignore  CMakeLists.txt  README.md  TECHNICAL.md  main.cpp
.github/workflows/: ci.yml
Documentation/: ARCHITECTURE_REFACTORING.md  SEMANTIC_ANALYSIS.md  TECHNICAL.md
include/mycc/AST/: AST.hpp  ASTContext.hpp  ASTPrinter.hpp  ASTUtils.hpp
include/mycc/Basic/: Diagnostic.def  Diagnostic.hpp  LLVM.hpp  TokenKinds.def  TokenKinds.hpp
include/mycc/CodeGen/: IRGen.hpp
include/mycc/IR/: SimpleIR.hpp
include/mycc/Lexer/: Lexer.hpp  Token.hpp
include/mycc/Opt/: LLVMOptimizer.hpp
include/mycc/Parser/: Parser.hpp
include/mycc/Sema/: Scope.hpp  Sema.hpp
lib/: CMakeLists.txt
lib/AST/: ASTPrinter.cpp  CMakeLists.txt
lib/Basic/: CMakeLists.txt  Diagnostic.cpp  TokenKinds.cpp
lib/CodeGen/: CMakeLists.txt  IRGen.cpp
lib/CodeGen/llvm/: LLVMIRGen.cpp
lib/CodeGen/x64/: X64CodeGen.cpp
lib/Lexer/: CMakeLists.txt  Lexer.cpp
lib/Opt/: CMakeLists.txt  LLVMOptimizer.cpp
lib/Parser/: CMakeLists.txt  Parser.cpp
lib/Sema/: CMakeLists.txt  Scope.cpp  Sema.cpp
lib/Sema/Analyses/: CMakeLists.txt  GotoLabelValidator.cpp  LabelGenerator.cpp  LoopLabelAssigner.cpp  TypeExpressionInference.cpp
test/LLVM/: CMakeLists.txt  run_llvm_test.cmake
test/LLVM/arithmetic/: add_sub.c  div_rem.c  mul.c
test/LLVM/assignment/: prefix_postfix.c  simple.c  ternary.c
test/LLVM/bitwise/: and_or_xor.c  shifts.c
test/LLVM/comparisons/: equality.c  relational.c
test/LLVM/do_while/: runs_once.c  simple.c
test/Lexer/: return_values.c  simple.c  variables.c
(+40 files in other folders)
